cmake_minimum_required(VERSION 3.13)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp main.cpp chapter_01_hello.cpp chapter_01_hello.h chapter_02_datatype.cpp chapter_02_datatype.h chapter_03_expression.cpp chapter_03_expression.h chapter_04_judgment.cpp chapter_04_judgment.h chapter_05_cycle.cpp chapter_05_cycle.h chapter_06_function.cpp chapter_06_function.h)